Fixed build errors in template

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -123,7 +123,7 @@ Make sure the \texttt{.xml} score filename selected does not already exist. Othe
 \item \AutoCalc\ imports the group lists and displays the student IDs and names in the main panel (Figure~\ref{fig:grouplist}).
 
 \begin{figure}[hbt!]\centering
-\includegraphics[width=\textwidth]{grouplist}
+\includegraphics[width=\textwidth]{grouplist.png}
 \caption{Imported group list}\label{fig:grouplist}
 \end{figure}
 \end{enumerate}
@@ -154,7 +154,7 @@ You can also load the peer ratings entry window of a student by keying in the ID
 
 \begin{enumerate}
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{scorewindow}
+\includegraphics[width=\textwidth]{scorewindow.png}
 \caption{Peer Ratings Window}
 \end{figure}
 
@@ -165,7 +165,7 @@ You can also load the peer ratings entry window of a student by keying in the ID
 \item You may click on the \keys{Peer Ratings Received by \ldots} tab to see ratings received by a student.
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{ratingsreceived}
+\includegraphics[width=\textwidth]{ratingsreceived.png}
 \caption{Peer Ratings Received}
 \end{figure}
 
@@ -177,7 +177,7 @@ You can also load the peer ratings entry window of a student by keying in the ID
 \item Click on the \keys{Group Overview} tab to see autorated weights and scores for each student in the group.
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{groupoverview}
+\includegraphics[width=\textwidth]{groupoverview.png}
 \caption{Autorated Weights and Scores of Group Members}
 \end{figure}
 
@@ -194,13 +194,13 @@ You may open an existing assignment score file (\texttt{*.xml}) to inspect score
 The autorated scores can be exported for further processing in Excel.
 \begin{enumerate}
 \item Select \menu{File>Export\ldots} from the menu, or \keys{Ctrl+E}.
-\item Select a file name to save the exported data in. The file will be saved with a \texttt{.csv} extension. \includegraphics[height=1em]{csv}
+\item Select a file name to save the exported data in. The file will be saved with a \texttt{.csv} extension. \includegraphics[height=1em]{csv.png}
 \item In Windows Explorer, locate the \texttt{.csv} file and double-click on it to open it in Excel.
 \item If warning messages are displayed, keep on clicking \keys{OK} or \keys{Yes} to ignore them.
 \item When the data is displayed, you may save the file as an \texttt{.xlsx} or \texttt{.xsl} Excel file, and continue processing it.
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{excel}
+\includegraphics[width=\textwidth]{excel.png}
 \caption{Exported data in Excel}
 \end{figure}
 
